Add L1: Exercise 1 - Solutions

--- a/L5-PyTorch.ipynb
+++ b/L5-PyTorch.ipynb
@@ -286,7 +286,7 @@
    "id": "456ab0ae-8c71-4b4a-9d73-0f575c2bf40b",
    "metadata": {},
    "source": [
-    "## Exercise 1 : Solution - Add Dropout Layers\n"
+    "## Exercise 1 : Solution - Add Dropout Layers"
    ]
   },
   {
