Update README with links towards L1 through L5

--- a/L3-PyTorch.ipynb
+++ b/L3-PyTorch.ipynb
@@ -5,7 +5,9 @@
    "id": "369d636a",
    "metadata": {},
    "source": [
-    "# Leap of Faith in PyTorch [L3] -Autograd and Computational Graphs (Day 3) - Demo"
+    "# Leap of Faith in PyTorch [L3] - Autograd and Computational Graphs (Day 3) - Demo\n",
+    "\n",
+    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L3] - Autograd and Computational Graphs (Day 3)](https://medium.com/gitconnected/leap-of-faith-in-pytorch-predicting-gdp-growth-with-computational-graphs-day-3-31a18ef7256a)"
    ]
   },
   {
