--- a/L4-PyTorch.ipynb
+++ b/L4-PyTorch.ipynb
@@ -5,7 +5,9 @@
    "id": "369d636a",
    "metadata": {},
    "source": [
-    "# Leap of Faith in PyTorch [L4] -Building a Simple Neural Network (Day 4) - Demo"
+    "# Leap of Faith in PyTorch [L4] - Building a Simple Neural Network (Day 4) - Demo\n",
+    "\n",
+    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L4] - Building a Simple Neural Network (Day 4)](https://medium.com/gitconnected/leap-of-faith-in-pytorch-building-a-simple-neural-network-day-4-d38b96a48c0c)"
    ]
   },
   {
