--- a/L1-PyTorch.ipynb
+++ b/L1-PyTorch.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Leap of Faith in PyTorch [L1] - Introduction to PyTorch and Tensors - Demo\n",
     "\n",
-    "## 👉 [check it on Medium - Leap of Faith in PyTorch: Introduction (Day 1)](https://medium.com/@geeks.sw.gig/https://medium.com/practical-coders-chronicles/leap-of-faith-in-pytorch-introduction-day-1-ce9047352cf1)"
+    "## 👉 [check it on Medium - Leap of Faith in PyTorch: Introduction (Day 1)](https://medium.com/practical-coders-chronicles/leap-of-faith-in-pytorch-introduction-day-1-ce9047352cf1)"
    ]
   },
   {
@@ -228,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
