--- a/L6-PyTorch.ipynb
+++ b/L6-PyTorch.ipynb
@@ -5,9 +5,9 @@
    "id": "f29e7a03-e98c-4c36-83cd-432da347099f",
    "metadata": {},
    "source": [
-    "# Leap of Faith in PyTorch [L6] - Loss Function and Optimization in PyTorch (Day 6) - Demo\n",
+    "# Leap of Faith in PyTorch [L6] - Loss Function and Optimization in PyTorch (Day 6) - Demo\n",
     "\n",
-    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L6] - Loss Function and Optimization in PyTorch (Day 6)]()"
+    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L6] - Loss Function and Optimization in PyTorch (Day 6)](https://medium.com/gitconnected/loss-function-and-optimization-in-pytorch-a-short-guide-for-machine-learning-models-48a559e8451f)"
    ]
   },
   {
