--- a/L6-PyTorch.ipynb
+++ b/L6-PyTorch.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Leap of Faith in PyTorch [L6] - Loss Function and Optimization in PyTorch (Day 6) - Demo\n",
     "\n",
-    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L6] - Loss Function and Optimization in PyTorch (Day 6)](https://medium.com/gitconnected/loss-function-and-optimization-in-pytorch-a-short-guide-for-machine-learning-models-48a559e8451f)"
+    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L6] - Loss Function and Optimization in PyTorch (Day 6)](https://medium.com/gitconnected/loss-function-and-optimization-in-pytorch-a-short-guide-for-machine-learning-models-48a559e8451f\n"
    ]
   },
   {
