WIP - Day x - On reading (not decided yet, when it's gonna come)

--- a/L_x-PyTorch.ipynb
+++ b/L_x-PyTorch.ipynb
@@ -5,9 +5,9 @@
    "id": "f29e7a03-e98c-4c36-83cd-432da347099f",
    "metadata": {},
    "source": [
-    "# Leap of Faith in PyTorch [L7] - Code on Our Reading (Day 7) - Demo\n",
+    "# Leap of Faith in PyTorch [L_x] - Code on Our Reading (Day x) - Demo\n",
     "\n",
-    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L7] -  (Day 7)]()\n"
+    "## 👉 [check it on Medium - Leap of Faith in PyTorch [L_x] -  (Day x)]()\n"
    ]
   },
   {
