WIP - Day 7 Cruel Optimism

--- a/L7-PyTorch.ipynb
+++ b/L7-PyTorch.ipynb
@@ -5,7 +5,7 @@
    "id": "5355a54a-2f40-4bdc-893c-272a5f7b4cb5",
    "metadata": {},
    "source": [
-    "# Leap of Faith in PyTorch [L7] - Growth Mindset and Cruel Optimizm (Day 7) - Demo\n",
+    "# Leap of Faith in PyTorch [L7] - Growth Mindset and Cruel Optimism (Day 7) - Demo\n",
     "\n",
     "## 👉 [check it on Medium - Leap of Faith in PyTorch [L7] -  (Day 7)]()\n"
    ]
